# CubeSky

./: CMakeLists.txt  test.proto
config/protocols/java/: 767.json
data/: server.toml
data/world/default/: setting.toml
include/: codec.h  common.h  datatypes.h  handlers.h  main.h  server.h  setting.h  tasks.h  test.pb-c.h  typedefine.h
src/: codec.c  datatypes.c  handlers.c  main.c  server.c  setting.c  tasks.c  test.pb-c.c
